Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <h1>
 <a id="riotjs-tageditor" class="anchor" href="#riotjs-tageditor" aria-hidden="true"><span class="octicon octicon-link"></span></a>riotjs-tageditor</h1>
 
+<p>Editing environment based on <a href="http://muut.com/riotjs">riotjs</a> tags, intended for creating and sharing riotjs based tags. From small components to singel tags for a full application.
+It is opinionated, in that all the tags should communicate only with events. The intention is to keep every component standalone. But the intention is also to be out of the way, and not introduce new API functions instead rely on pure HTML, CSS and JavaScript.</p>
+
 <p>Small environment for prototyping riotjs tags. Allows to create a tag, a separate style sheet and set mock options for the tag. </p>
 
 <h1>
