--- a/index.html
+++ b/index.html
@@ -1,55 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Riotjs-tageditor by opture</title>
-  </head>
+  <title>Riotjs-tageditor</title>
+  <meta name="description" content="Small environment for prototyping riotjs tags. Allows to create a tag and set the options for it. ">
 
-  <body>
-    <a id="forkme_banner" href="https://github.com/opture/riotjs-tageditor">View on GitHub</a>
-    <div class="shell">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Riotjs-tageditor</h1>
-            <h2>Small environment for prototyping riotjs tags. Allows to create a tag and set the options for it. </h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+</head>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/opture/riotjs-tageditor/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/opture/riotjs-tageditor/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+<body>
 
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h1>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Riotjs-tageditor</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">Small environment for prototyping riotjs tags. Allows to create a tag and set the options for it. </p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/opture/riotjs-tageditor/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/opture/riotjs-tageditor/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/opture/riotjs-tageditor" class="code">View Riotjs-tageditor on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h1>
 <a id="riotjs-tageditor" class="anchor" href="#riotjs-tageditor" aria-hidden="true"><span class="octicon octicon-link"></span></a>riotjs-tageditor</h1>
 
-<p>Editing environment based on <a href="http://muut.com/riotjs">riotjs</a> tags, intended for creating and sharing riotjs based tags. From small components to singel tags for a full application.
+<p>Editing environment based on <a href="http://muut.com/riotjs">riotjs</a> tags, intended for creating and sharing riotjs based tags. From small components to tags that implement a full application.
 It is opinionated, in that all the tags should communicate only with events. The intention is to keep every component standalone. But the intention is also to be out of the way, and not introduce new API functions instead rely on pure HTML, CSS and JavaScript.</p>
 
 <p>Small environment for prototyping riotjs tags. Allows to create a tag, a separate style sheet and set mock options for the tag. </p>
@@ -58,22 +48,26 @@ It is opinionated, in that all the tags should communicate only with events. The
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description</h1>
 
 <p>The intention is to create an easy to use tag development tool. </p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/opture">opture</a> can be found on <a href="https://github.com/opture/riotjs-tageditor">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/opture" class="avatar"><img src="https://avatars3.githubusercontent.com/u/1523192?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/opture">opture</a> maintains <a href="https://github.com/opture/riotjs-tageditor">Riotjs-tageditor</a></p>
 
-    
-  </body>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/opture/riotjs-tageditor/tarball/master" class="tar">tar</a><a href="https://github.com/opture/riotjs-tageditor/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
